# lxa

./: .markdownlint.yaml  Makefile  README.md  WORKLOG.md  WORKLOG_ARCHIVE_2026-05-14.md  WORKLOG_ARCHIVE_2026-05-15.md  pyproject.toml
.github/workflows/: ci.yml  pr-artifacts.yml
.openhands/microagents/: design-composition.md  design-style.md  implementation-plan.md
.openhands/skills/: repo.md
.pr/: board-rules-design.md  demo.demorec  demo_video.srt  index.html  review-command-design.md
doc/: design.md
doc/archive/: design-template.md  process-description.md  process-notes.md
doc/design/: design-composition-agent.md  execution-agent-design.md  implementation-agent-design.md  issue-command-proposal.md  journal.md  markdown-tool-benchmark.md  markdown-tool.md  ralph-learnings.md  ralph-loop.md  tool-integration-experiment.md
doc/examples/: README.md  demo_agent_with_checklist.py  demo_checklist_tool.py  sample_design.md
doc/reference/: artifact-path-configuration.md  board-management.md  pr-folder-cleanup-workflow.yml  pr-refinement.md  squash-commit-messages.md
doc/testing/: board-cli-uat-plan.md  issue-command-test-plan.md
scripts/: heredoc_pty_issue.py
src/: __main__.py  __main__.py.bak  _version.py  config.py  global_config.py
src/agents/: __init__.py  design_agent.py  orchestrator.py  task_agent.py
src/board/: __init__.py  cache.py  commands.py  config.py  github_api.py  models.py  service.py  state.py  sync.py  yaml_config.py
src/hooks/: __init__.py  sandbox.py
src/issue/: config.py  history.py
src/jobs/: __init__.py  executor.py  manager.py  models.py  storage.py  wrapper.py
src/pr/: config.py  github_api.py  history.py  models.py
src/ralph/: __init__.py  commit_message.py  github_review.py  multi_pr.py  refine.py  refinement_config.py  runner.py  state.py
src/repo/: config.py
src/review/: github_api.py  models.py  status.py
src/skills/: __init__.py  reconcile.py
src/tools/: __init__.py  checklist.py  journal.py
src/utils/: github.py
src/visualizers/: __init__.py  reasoning_focused.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_refine.py  test_config.py  test_global_config.py  test_version.py  testing.py
tests/agents/: __init__.py  test_design_agent.py  test_orchestrator.py  test_task_agent.py
tests/board/: test_add_item.py  test_api_logging.py  test_cache.py  test_cli_smoke.py  test_commands_integration.py  test_config.py  test_github_api_integration.py  test_models.py  test_service.py  (+2 more)
(+78 files in other folders)
